--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@snapview/sunrise-dom",
     "version": "1.0.0",
     "description": "A `sunrise`-based lib for DOM-manipulations",
-    "main": "index.js",
+    "main": "src/index.ts",
     "scripts": {
         "format": "prettier --write .",
         "format:check": "prettier --check .",
@@ -14,6 +14,10 @@
         "type": "git",
         "url": "git+https://github.com/snapview/sunrise-dom.git"
     },
+    "files": [
+        "src",
+        "package.json"
+    ],
     "author": "Snapview.de team",
     "license": "MIT",
     "devDependencies": {
